Added self checking phpcs and phpcs to composer

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,7 @@
             "email": "tom.h.anderson@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "squizlabs/php_codesniffer": "^3.2"
+    }
 }
